--- a/songr/src/main/resources/static/style.css
+++ b/songr/src/main/resources/static/style.css
@@ -36,3 +36,10 @@ text-align: center;
 .albumTitle{
 color: #C89595;
 }
+
+
+.form{
+text-align: center;
+ font-size: 16px;
+  font-family: tahoma;
+}
