--- a/songr/src/main/resources/templates/albums.html
+++ b/songr/src/main/resources/templates/albums.html
@@ -22,10 +22,13 @@
             <li>
                 <a href="/albums">Albums</a>
             </li>
+            <li>
+                <a href="/songs">Songs</a>
+            </li>
         </ul>
     </div>
 </header>
-<h1>Form</h1>
+<h1>Fill the Form below if you would like to add a new Album </h1>
 <form th:action="@{/albums}" th:object="${Album}" method="post" class="form">
     <p>Title     <input type="text" field=" ${album.title}" name="title" /></p>
     <p>Artist    <input type="text" field="${album.artist}" name="artist"/></p>
