--- a/songr/src/main/resources/templates/capitalize.html
+++ b/songr/src/main/resources/templates/capitalize.html
@@ -22,6 +22,10 @@
             <li style="display: inline;list-style-type: none;padding: 3%;">
                 <a href="/albums" style="color: #6C4A4A; text-align: center font-size: 16px;font-family: tahoma;text-decoration: none" >Albums</a>
             </li>
+            <li style="display: inline;list-style-type: none;padding: 3%;">
+                <a href="/songs" style="color: #6C4A4A; text-align: center font-size: 16px;font-family: tahoma;text-decoration: none" >Songs</a>
+            </li>
+
         </ul>
     </div>
 </header>
