--- a/songr/src/main/resources/templates/index.html
+++ b/songr/src/main/resources/templates/index.html
@@ -22,6 +22,9 @@
             <li>
                 <a href="/albums">Albums</a>
             </li>
+            <li>
+                <a href="/songs">Songs</a>
+            </li>
         </ul>
     </div>
 </header>
